--- a/7/15.ipynb
+++ b/7/15.ipynb
@@ -20,10 +20,27 @@
         "c<-2.99792e8 # Valon nopeus\n",
         "h<-6.6260693e-34 # Plancin vakio\n",
         "eV<-1.6021766e-19 # Elektorinivoltti\n",
-        "sigma<-5.670374419e-8 # Stefan-Boltzman"
+        "sigma<-5.670374419e-8 # Stefan-Boltzman\n",
+        "cat(format(Sys.time(),\"%d.%m.%Y %H:%M:%S\"))\n",
+        "version"
       ],
-      "outputs": [],
-      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "04.12.2021 23:22:42"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": "               _                           \nplatform       x86_64-w64-mingw32          \narch           x86_64                      \nos             mingw32                     \nsystem         x86_64, mingw32             \nstatus                                     \nmajor          4                           \nminor          1.2                         \nyear           2021                        \nmonth          11                          \nday            01                          \nsvn rev        81115                       \nlanguage       R                           \nversion.string R version 4.1.2 (2021-11-01)\nnickname       Bird Hippie                 "
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 18,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -36,69 +53,10 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-12-04T20:51:26.438Z",
-          "iopub.execute_input": "2021-12-04T20:51:26.446Z",
-          "iopub.status.idle": "2021-12-04T20:51:26.517Z",
-          "shell.execute_reply": "2021-12-04T20:51:26.500Z"
-        }
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "2-5 \n",
-        "\n",
-        "Kirjan vastaus: 5-09 eV, Nikkeli"
-      ],
-      "metadata": {
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n"
-      ],
-      "outputs": [],
-      "execution_count": 3,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        },
-        "execution": {
-          "iopub.status.busy": "2021-12-04T20:52:40.099Z",
-          "iopub.execute_input": "2021-12-04T20:52:40.106Z",
-          "iopub.status.idle": "2021-12-04T20:52:40.121Z",
-          "shell.execute_reply": "2021-12-04T20:52:40.135Z"
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
+          "iopub.status.busy": "2021-12-04T21:22:42.606Z",
+          "iopub.execute_input": "2021-12-04T21:22:42.614Z",
+          "iopub.status.idle": "2021-12-04T21:22:42.659Z",
+          "shell.execute_reply": "2021-12-04T21:22:42.649Z"
         }
       }
     }
