--- a/7/k.ipynb
+++ b/7/k.ipynb
@@ -16,38 +16,32 @@
     {
       "cell_type": "code",
       "source": [
-        "using Printf\n",
-        "using Dates\n",
-        "b=2.897768e-3 # Wienin siirtymälain vakio\n",
-        "c=2.99792e8 # Valon nopeus\n",
-        "h=6.6260693e-34 # Plancin vakio\n",
-        "eV=1.6021766e-19 # Elektorinivoltti\n",
-        "sigma=5.670374419e-8 # Stefan-Boltzman\n",
-        "@printf \"%s\\n\" Dates.now();\n",
-        "versioninfo(verbose=false);"
+        "b<-2.897768e-3 # Wienin siirtymälain vakio\n",
+        "c<-2.99792e8 # Valon nopeus\n",
+        "h<-6.6260693e-34 # Plancin vakio\n",
+        "eV<-1.6021766e-19 # Elektorinivoltti\n",
+        "sigma<-5.670374419e-8 # Stefan-Boltzman\n",
+        "H0<-22e-6# km/s/ly\n",
+        "cat(format(Sys.time(),\"%d.%m.%Y %H:%M:%S\"))\n",
+        "version"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2021-11-15T18:34:40.52\n",
-            "Julia Version 1.5.4\n",
-            "Commit 69fcb5745b (2021-03-11 19:13 UTC)\n",
-            "Platform Info:\n",
-            "  OS: Windows (x86_64-w64-mingw32)\n",
-            "  CPU: Intel(R) Core(TM) i7-8650U CPU @ 1.90GHz\n",
-            "  WORD_SIZE: 64\n",
-            "  LIBM: libopenlibm\n",
-            "  LLVM: libLLVM-9.0.1 (ORCJIT, skylake)\n",
-            "Environment:\n",
-            "  JULIA_DEPOT_PATH = C:\\Users\\snikula\\.julia;C:\\Users\\snikula\\AppData\\Local\\JuliaPro-1.5.4-1\\Julia-1.5.4\\local\\share\\julia;C:\\Users\\snikula\\AppData\\Local\\JuliaPro-1.5.4-1\\Julia-1.5.4\\share\\julia\n",
-            "  JULIA_LOAD_PATH = C:\\Users\\snikula\\.julia\\environments\\JuliaPro_v1.5.4-1;@;@v#.#;@stdlib\n",
-            "  JULIA_PKG_SERVER = pkg.juliahub.com\n"
+            "05.12.2021 12:22:03"
           ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": "               _                           \nplatform       x86_64-w64-mingw32          \narch           x86_64                      \nos             mingw32                     \nsystem         x86_64, mingw32             \nstatus                                     \nmajor          4                           \nminor          1.2                         \nyear           2021                        \nmonth          11                          \nday            01                          \nsvn rev        81115                       \nlanguage       R                           \nversion.string R version 4.1.2 (2021-11-01)\nnickname       Bird Hippie                 "
+          },
+          "metadata": {}
         }
       ],
-      "execution_count": 37,
+      "execution_count": 1,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -60,19 +54,181 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-11-15T16:34:40.541Z",
-          "iopub.execute_input": "2021-11-15T16:34:40.551Z",
-          "iopub.status.idle": "2021-11-15T16:34:40.573Z"
+          "iopub.status.busy": "2021-12-05T10:22:03.145Z",
+          "iopub.execute_input": "2021-12-05T10:22:03.157Z",
+          "iopub.status.idle": "2021-12-05T10:22:03.245Z",
+          "shell.execute_reply": "2021-12-05T10:22:03.226Z"
         }
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "2-5 \n",
+        "3\n",
         "\n",
-        "Kirjan vastaus: 5-09 eV, Nikkeli"
+        "Kirjan vastaus: d) 8.05 keV, 4.3e-24 kgm/s"
       ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5\n",
+        "\n",
+        "Kirjan vastaus: i) 250 nm"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Kirjan vastaus:"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Kirjan vastaus:"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Kirjan vastaus:"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Kirjan vastaus:"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Kirjan vastaus:"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Kirjan vastaus:"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Kirjan vastaus:"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Kirjan vastaus:"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Kirjan vastaus:"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
       "metadata": {
         "nteract": {
           "transient": {
@@ -87,10 +243,12 @@
       "name": "julia-nteract-1.5"
     },
     "language_info": {
-      "file_extension": ".jl",
-      "name": "julia",
-      "mimetype": "application/julia",
-      "version": "1.5.4"
+      "name": "R",
+      "codemirror_mode": "r",
+      "pygments_lexer": "r",
+      "mimetype": "text/x-r-source",
+      "file_extension": ".r",
+      "version": "4.1.2"
     },
     "kernelspec": {
       "argv": [
