--- a/7/k.ipynb
+++ b/7/k.ipynb
@@ -26,6 +26,7 @@
         "ma<-4.001506179127*u # alfa hiukkasen massa [kg]\n",
         "eV<-1.6021766e-19 # Elektorinivoltti\n",
         "sigma<-5.670374419e-8 # Stefan-Boltzman\n",
+        "Rh<-1.0973731e7 # Rydbegin vakio vedylle\n",
         "H0<-22e-6# km/s/ly\n",
         "cat(format(Sys.time(),\"%d.%m.%Y %H:%M:%S\"))\n",
         "version"
@@ -35,7 +36,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "05.12.2021 18:42:04"
+            "07.12.2021 20:18:37"
           ]
         },
         {
@@ -46,7 +47,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 55,
+      "execution_count": 64,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -59,10 +60,10 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-12-05T16:42:04.992Z",
-          "iopub.execute_input": "2021-12-05T16:42:05.008Z",
-          "iopub.status.idle": "2021-12-05T16:42:05.148Z",
-          "shell.execute_reply": "2021-12-05T16:42:05.176Z"
+          "iopub.status.busy": "2021-12-07T18:18:37.618Z",
+          "iopub.execute_input": "2021-12-07T18:18:37.639Z",
+          "iopub.status.idle": "2021-12-07T18:18:37.682Z",
+          "shell.execute_reply": "2021-12-07T18:18:37.698Z"
         }
       }
     },
@@ -446,7 +447,7 @@
         "# l=h/(mv)\n",
         "l<-1e-10\n",
         "v<-h/(me*l)\n",
-        "q=eV\n",
+        "q<-eV\n",
         "U<-0.5*me*v^2/q\n",
         "cat(sprintf(\"Tarvittava jännite on %.0f V.\\n\",U))"
       ],
@@ -482,9 +483,9 @@
     {
       "cell_type": "markdown",
       "source": [
+        "11\n",
         "\n",
-        "\n",
-        "Kirjan vastaus:"
+        "Kirjan vastaus: a) 70 pm"
       ],
       "metadata": {
         "nteract": {
@@ -495,11 +496,49 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "U<-300#V\n",
+        "q<-eV\n",
+        "v<-sqrt(2*U*q/me)\n",
+        "l<-h/(me*v)\n",
+        "cat(sprintf(\"de Broglien aallonpituus on %.0f pm.\\n\",l/1e-12))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "de Broglien aallonpituus on 71 pm.\n"
+          ]
+        }
+      ],
+      "execution_count": 59,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-07T17:53:57.126Z",
+          "iopub.execute_input": "2021-12-07T17:53:57.142Z",
+          "shell.execute_reply": "2021-12-07T17:53:57.198Z",
+          "iopub.status.idle": "2021-12-07T17:53:57.215Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
+        "12\n",
         "\n",
-        "\n",
-        "Kirjan vastaus:"
+        "Kirjan vastaus: a) 35 kEv b) 1.9e-23 kgm/s"
       ],
       "metadata": {
         "nteract": {
@@ -510,11 +549,490 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "l<-35e-12\n",
+        "E<-h*c/l\n",
+        "cat(sprintf(\"Energia on %.0f kEv.\\n\",E/eV/1e3))\n",
+        "p<-h/l\n",
+        "cat(sprintf(\"Liikemäärä on %.1e kgm/s.\\n\",p))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Energia on 35 kEv.\n",
+            "Liikemäärä on 1.9e-23 kgm/s.\n"
+          ]
+        }
+      ],
+      "execution_count": 61,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-07T17:59:00.347Z",
+          "iopub.execute_input": "2021-12-07T17:59:00.362Z",
+          "shell.execute_reply": "2021-12-07T17:59:00.462Z",
+          "iopub.status.idle": "2021-12-07T17:59:00.413Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
+        "20\n",
         "\n",
+        "Kirjan vastaus: a) 122 nm b) 2.47 PHz"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "E<-10.2*eV# siirtyy tasolta 2 tasolle 1\n",
+        "l=1/(Rh*(1/1^2-1/2^2))\n",
+        "cat(sprintf(\"Aallonpituus siirtymän avulla on %.0f nm.\\n\",l/1e-9))\n",
+        "#E<-h*c/l\n",
+        "l=h*c/E\n",
+        "cat(sprintf(\"Aallonpituus suoraan energian avulla on %.0f nm.\\n\",\n",
+        "            l/1e-9))\n",
+        "f=c/l\n",
+        "cat(sprintf(\"Taajuus on %.2f PHz.\\n\",f/1e15))\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aallonpituus siirtymän avulla on 122 nm.\n",
+            "Aallonpituus suoraan energian avulla on 122 nm.\n",
+            "Taajuus on 2.47 PHz.\n"
+          ]
+        }
+      ],
+      "execution_count": 78,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-07T18:51:07.780Z",
+          "iopub.execute_input": "2021-12-07T18:51:07.798Z",
+          "iopub.status.idle": "2021-12-07T18:51:07.851Z",
+          "shell.execute_reply": "2021-12-07T18:51:07.868Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "21\n",
         "\n",
-        "Kirjan vastaus:"
+        "Kirjan vastaus: c (2.9 PHz)"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l=1/(Rh*(1/1^2-1/3^2))\n",
+        "cat(sprintf(\"Aallonpituus on %.0f nm.\\n\",l/1e-9))\n",
+        "f=c/l\n",
+        "cat(sprintf(\"Taajuus on %.1f PHz.\\n\",f/1e15))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aallonpituus on 103 nm.\n",
+            "Taajuus on 2.9 PHz.\n"
+          ]
+        }
+      ],
+      "execution_count": 77,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-07T18:50:26.132Z",
+          "iopub.execute_input": "2021-12-07T18:50:26.151Z",
+          "iopub.status.idle": "2021-12-07T18:50:26.203Z",
+          "shell.execute_reply": "2021-12-07T18:50:26.221Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "22\n",
+        "\n",
+        "Kirjan vastaus: b (4.1 µm)"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l=1/(Rh*(1/4^2-1/5^2))\n",
+        "cat(sprintf(\"Aallonpituus on %.1f µm.\\n\",\n",
+        "            l/1e-6))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aallonpituus on 4.1 µm.\n"
+          ]
+        }
+      ],
+      "execution_count": 73,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-07T18:43:55.115Z",
+          "iopub.execute_input": "2021-12-07T18:43:55.135Z",
+          "iopub.status.idle": "2021-12-07T18:43:55.175Z",
+          "shell.execute_reply": "2021-12-07T18:43:55.199Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "23\n",
+        "\n",
+        "Kirjan vastaus: a) ei b) 122 nm (ultravioletti)"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l=1/(Rh*(1/1^2-1/2^2))\n",
+        "cat(sprintf(\"Aallonpituus on %.0f nm.\\n\",l/1e-9))\n",
+        "cat(sprintf(\"Maksimienergia ilman tilasiirtymää on %.1f eV.\\n\",h*c/l/eV))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aallonpituus on 122 nm.\n",
+            "Maksimienergia ilman tilasiirtymää on 10.2 eV.\n"
+          ]
+        }
+      ],
+      "execution_count": 82,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-07T18:56:02.131Z",
+          "iopub.execute_input": "2021-12-07T18:56:02.146Z",
+          "iopub.status.idle": "2021-12-07T18:56:02.201Z",
+          "shell.execute_reply": "2021-12-07T18:56:02.224Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "24\n",
+        "\n",
+        "Kirjan vastaus: a) ei b) 4.88 eV"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f<-0.71e15#Hz\n",
+        "E<-h*f\n",
+        "cat(sprintf(\"a) Sinisen valon energia on %.1f eV.\\n\",E/eV))\n",
+        "# alle 3.1 eV eli ei ionisoi\n",
+        "l=254e-9#m\n",
+        "E<-h*c/l\n",
+        "cat(sprintf(\"b) Ultravioletin kvantin energia on %.2f eV.\\n\",E/eV))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a) Sinisen valon energia on 2.9 eV.\n",
+            "b) Ultravioletin kvantin energia on 4.88 eV.\n"
+          ]
+        }
+      ],
+      "execution_count": 86,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-07T19:01:28.307Z",
+          "iopub.execute_input": "2021-12-07T19:01:28.324Z",
+          "iopub.status.idle": "2021-12-07T19:01:28.372Z",
+          "shell.execute_reply": "2021-12-07T19:01:28.403Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "26\n",
+        "\n",
+        "Kirjan vastaus: a) 70 pm b) 35 kV c) 35 keV"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lmin<-35e-12\n",
+        "U<-h*c/(eV*lmin)\n",
+        "cat(sprintf(\"b) Röntgenputken jännite on %.0f kV.\\n\",U/1e3))\n",
+        "E<-eV*U\n",
+        "cat(sprintf(\"b) Elektronien liike-energia on %.0f keV.\\n\",E/1e3/eV))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "b) Röntgenputken jännite on 35 kV.\n",
+            "b) Elektronien liike-energia on 35 keV.\n"
+          ]
+        }
+      ],
+      "execution_count": 96,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-07T19:26:40.264Z",
+          "iopub.execute_input": "2021-12-07T19:26:40.286Z",
+          "iopub.status.idle": "2021-12-07T19:26:40.441Z",
+          "shell.execute_reply": "2021-12-07T19:26:40.457Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "27\n",
+        "\n",
+        "Kirjan vastaus: a) mangaani c) elektronisieppaus, raudan isotooppi"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ke_from_f <-function(f){\n",
+        "  ke=h*f  \n",
+        "  cat(sprintf\n",
+        "      (\"Taajuutta %.1e vastaavan säteilyn energia on %.1f kEv .\\n\",\n",
+        "         f,ke/eV/1e3))\n",
+        "}\n",
+        "ke_from_f(1.4e18)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Taajuutta 1.4e+18 vastaavan säteilyn energia on 5.8 kEv .\n"
+          ]
+        }
+      ],
+      "execution_count": 97,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-07T19:36:16.026Z",
+          "iopub.execute_input": "2021-12-07T19:36:16.069Z",
+          "iopub.status.idle": "2021-12-07T19:36:16.116Z",
+          "shell.execute_reply": "2021-12-07T19:36:16.133Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "28\n",
+        "\n",
+        "Kirjan vastaus: 36 astetta"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# E=0.5*m*v^2\n",
+        "E<-0.02*eV\n",
+        "v<-sqrt(2*E/mn)\n",
+        "# de Broegin aallonpituus\n",
+        "p<-v*mn\n",
+        "l<-h/p\n",
+        "# d sin(theta)=n*lambda\n",
+        "d<-0.33e-9#m\n",
+        "n<-1\n",
+        "theta<-asin(n*l/d)*180/pi\n",
+        "cat(sprintf\n",
+        "      (\"Suunta poikkeaa %.0f astetta.\\n\",theta)) "
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Suunta poikkeaa 38 astetta.\n"
+          ]
+        }
+      ],
+      "execution_count": 103,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-07T19:50:57.174Z",
+          "iopub.execute_input": "2021-12-07T19:50:57.195Z",
+          "iopub.status.idle": "2021-12-07T19:50:57.243Z",
+          "shell.execute_reply": "2021-12-07T19:50:57.263Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "30\n",
+        "\n",
+        "Kirjan vastaus: a) 0.137006 u b) 1559.42 MeV c) 7.53026 MeV"
       ],
       "metadata": {
         "nteract": {
